--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -59,3 +59,10 @@ jobs:
         name: api.tar.gz
         path: web_build/api.tar.gz
         if-no-files-found: error
+    - name: Upload Python package dependencies
+      uses: actions/upload-artifact@v4
+      with:
+        path: |
+          pdm.lock
+          pyproject.toml
+        if-no-files-found: error
