Define python package state filename

--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -62,6 +62,7 @@ jobs:
     - name: Upload Python package dependencies
       uses: actions/upload-artifact@v4
       with:
+        name: py_build_state
         path: |
           pdm.lock
           pyproject.toml
