--- a/.github/workflows/release_api_backend.yml
+++ b/.github/workflows/release_api_backend.yml
@@ -33,5 +33,7 @@ jobs:
       with:
         name: AuScope Geomodels back-end assets release based on tag ${{github.ref}}
         files: |
-           ./**/*
+          pyproject.toml
+          pdm.lock
+          ./**/*.tar.gz
         fail_on_unmatched_files: true
