Add code to generate convex hull GeoJSON file - Generates one 2D convex hull in XY plane per model - Saves it as 'convex_hull.geojson' in the output folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,14 @@ dependencies = [
     "SQLAlchemy",
     "diskcache",
     "nvcl-kit>=1.2.3",
-    "geojson",
+    "geojson>=3.2.0",
     "fastapi",
     "aiofiles",
     "uvicorn",
     "wheel",
     "pytest>=8.3.2",
     "pygltflib>=1.16.2",
+    "scipy>=1.13.1",
 ]
 requires-python = ">=3.9"
 
