Fix release branch name error

--- a/.github/workflows/release_api_backend.yml
+++ b/.github/workflows/release_api_backend.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Add to release
       uses: softprops/action-gh-release@v2
       with:
-        name: AuScope Geomodels back-end assets release based on tag ${{github.ref}}
+        name: AuScope Geomodels back-end assets release based on tag ${{github.ref_name}}
         files: |
           ./**/*
         fail_on_unmatched_files: true
