Changes: - Ability to directly query the local db for nearby NVCL boreholes - Updated instructions for running back-end with uwsgi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ test = [
 experimental = [
     "pyassimp>=5.2.5",
 ]
+dev = [
+    "uwsgi>=2.0.30",
+]
 
 [build-system]
 requires = ["pdm-backend"]
